--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -58,6 +58,7 @@ ext {
     roomVersion = '2.3.0'
     lifeCycleVersion = '2.4.0-alpha02'
     composeVersion = '1.1.0-alpha02'
+    pagingVersion = '3.0.1'
 
     //Animation
     lottieVersion = '4.1.0'
@@ -80,7 +81,7 @@ ext {
     espressVersion = '3.4.0'
     androidTestRuleVersion='1.1.0'
     archTextVersion = '2.1.0'
-    robolectricVersion = '4.6.1'
+    robolectricVersion = '4.4'
 
     //Kakao
     kakaoSdkVersion = '2.5.2'
