--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lyj.itunesapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name="com.lyj.ITunesApp"
         android:allowBackup="true"
@@ -12,13 +16,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ItuensApp">
         <activity
-            android:name="com.lyj.itunesapp.ui.main.MainActivity"
+            android:name=".ui.activites.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activites.main.MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
